--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Flash</string>
     <string name="title_activity_message_page">MessagePage</string>
     <string name="reconfigurable">Reconfigurable</string>
     <string name="f1Mapping">f1Mapping</string>
